# images-crawler

./: .gitignore  README.md  pyproject.toml
crawler/: scrapy.cfg
crawler/images_crawler/: db_manager.py  items.py  middlewares.py  models.py  pipelines.py  services.py  settings.py
crawler/images_crawler/spiders/: freeimages.py
crawler/images_crawler/tests/: test_freeimages.py
crawler/tests/: test_pipelines.py  test_services.py
